<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yolo_fighter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    
    <!-- Skills Menu -->
    <string name="player_tab">Player</string>
    <string name="weapon_tab">Weapon</string>
    <string name="skill1_tab">Skill 1</string>
    <string name="skill2_tab">Skill 2</string>
    <string name="skill3_tab">Skill 3</string>
    
    <!-- Player Stats -->
    <string name="Stat1">Strength</string>
    <string name="Stat2">Stamina</string>
    <string name="Stat3">Resistance</string>
    <string name="Stat4">Agility</string>
    <string name="Units">Units</string>
    
    <string-array name="player_list">
		<item>Anioł Dewastator</item>
		<item>Nekromanta Rozbójnik</item>
		<item>Devil Evil</item>
	</string-array>
    <string name="app_id">1085495637692</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="return_main_menu">Main menu</string>
    <string name="resume_game">Wróć do gry</string>
    <string name="game_paused">Gra wstrzymana</string>
    <string name="invitation_sent">Zaproszenie zostało wysłane</string>
    <string name="new_invitation">Zaproszenie</string>
    <string name="invitation_dialog">zaprasza Cię do gry</string>
    <string name="yes">Akceptuj</string>
    <string name="no">Odrzuć</string>
    

</resources>
