<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/stone" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/playerBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab"
            android:text="@string/player_tab" 
            android:textColor="@color/dark_tab"
            android:onClick="skillsClick"/>

        <Button
            android:id="@+id/weaponBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab"
            android:text="@string/weapon_tab"
            android:textColor="@color/dark_tab"
            android:onClick="weaponClick"/>

        <Button
            android:id="@+id/skill1Btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab" 
            android:text="@string/skill1_tab" 
            android:textColor="@color/dark_tab"
            android:onClick="skill1Click"/>

        <Button
            android:id="@+id/skill2Btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab" 
            android:text="@string/skill2_tab" 
            android:textColor="@color/dark_tab"
            android:onClick="skill2Click"/>

        <Button
            android:id="@+id/skill3Btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab2" 
            android:text="@string/skill3_tab" 
            android:textColor="@color/highlited_tab"
            android:onClick="skill3Click"/>
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="match_parent"
   		android:layout_height="match_parent"
    	android:orientation="horizontal" >
        
        <HorizontalScrollView
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
    		
              <ImageView
                  android:id="@+id/imageView1"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/crossbows" />

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="Tutaj będzie krótki opis broni/skilla," />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="cena i level, który trzeba mieć, żeby móc kupić" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="BUY/EQUIP" />
        </LinearLayout>
          
    </LinearLayout>

</LinearLayout>
